--- a/styles/styles.css
+++ b/styles/styles.css
@@ -551,7 +551,7 @@ header .someIcons {
 }
 
 .projects__item4 {
-  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888818/genadi/projectspage/print_design.png');
+  background: linear-gradient( to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888818/genadi/projectspage/print_design.png');
 }
 
 .projects__item5 {
@@ -559,7 +559,7 @@ header .someIcons {
 }
 
 .projects__item6 {
-  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888817/genadi/projectspage/3d_design.jpg');
+  background: linear-gradient( to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)), url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888817/genadi/projectspage/3d_design.jpg');
 }
 
 .projects__item--text {
