--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,57 @@
   }
 }
 
+@keyframes focus-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    transform: scale(0.91);
+    animation-timing-function: ease-in;
+  }
+  17% {
+    transform: scale(0.98);
+    animation-timing-function: ease-out;
+  }
+  33% {
+    transform: scale(0.87);
+    animation-timing-function: ease-in;
+  }
+  45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+  }
+}
+
+@keyframes swing-in-left-bck {
+  0% {
+    transform: rotateY(-70deg);
+    transform-origin: left;
+    opacity: 0;
+  }
+  100% {
+    transform: rotateY(0);
+    transform-origin: left;
+    opacity: 1;
+  }
+}
+
+
+
 body,
 html {
   font: 14px/21px 'OpenSansR', sans-serif;
@@ -80,6 +131,10 @@ header hr {
   background-color: #141414;
 }
 
+.disabled{
+  pointer-events: none;
+  opacity: 0.6;
+}
 .nav-item .nav-link::after {
   display: block;
   content: " ";
@@ -198,7 +253,7 @@ header .someIcons {
 }
 
 .slick-slide {
-  transition: all 0.8s ease-in;
+  transition: transform 0.8s ease-in;
   transform: scale(0.9);
 }
 
@@ -221,6 +276,13 @@ header .someIcons {
   color: #8F7E4F;
   letter-spacing: 0.15rem;
   margin-left: 1.2rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.arrow-link:hover{
+  color: #8F7E4F;
+  text-decoration: none;
+  transform: scale(1.5);
 }
 
 /* testimonials-section */
@@ -300,6 +362,10 @@ header .someIcons {
   font: 14px/21px 'OpenSansR', sans-serif;
 }
 
+.contact-section__form button:hover{
+  animation: heartbeat 1.5s ease-in-out both;
+}
+
 .contact-section__form input,
 .contact-section__form textarea {
   width: 100%;
@@ -376,7 +442,10 @@ header .someIcons {
 .aboutpage__text {
   padding: 0 1.2rem;
 }
-
+.aboutpage__text p a{
+  color: #8F7E4F;
+  text-decoration: none;
+}
 .aboutpage__text h3 {
   padding-bottom: 1rem;
 }
@@ -926,6 +995,18 @@ header .someIcons {
   header .someIcons {
     padding-top: 0;
   }
+  .someIcons a img{
+    transition: all 0.3s ease;
+  }
+  .someIcons a img:hover{
+    transform: scale(1.2)
+  }
+  .nav-link{
+    transition: all 0.3s ease-in-out;
+  }
+  .nav-link:hover{
+    transform: scale(1.2);
+  }
   .navbar-collapse {
     justify-content: flex-end;
     flex-grow: 0 !important;
@@ -965,9 +1046,15 @@ header .someIcons {
   .home-section__text h1 {
     font-size: 4rem;
     line-height: 6rem;
+    animation: focus-in-expand 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  }
+
+  .home-section__text .smaller {
+    animation: focus-in-expand 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   }
   .home-section .section1 p {
     font-size: 2rem;
+    animation: focus-in-expand 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   }
   .home-section__text p br {
     display: none;
